# proc-heim

./: .gitignore  Cargo.toml  README.md  crates-io.md  rust-nightly.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml
src/: lib.rs  main.rs  working_dir.rs
src/process/: log_reader.rs  manager.rs  message.rs  message_stream.rs  mod.rs  process_handle.rs  reader.rs  scoped_process_handle.rs  serde.rs  spawner.rs  writer.rs
src/process/model/: builders.rs  command.rs  id.rs  mod.rs  process.rs  runnable.rs  script.rs  serde.rs
test-utils/: Cargo.toml
test-utils/scripts/named_pipe/: echo.sh  echo_daemon.sh  echo_json.sh
test-utils/scripts/std_io/: echo_all_args.sh  echo_daemon.sh  echo_json.sh  echo_stderr.sh
test-utils/src/: cmd_collection.rs  lib.rs  scripts_collection.rs
tests/: abort.rs  env.rs  logs.rs  named_pipe.rs  process.rs  process_data.rs  process_handle.rs  scoped_process_handle.rs  scripts.rs  standard_io.rs
tests/common/: mod.rs
tests/test_cases/: mod.rs
