workspace = { members = ["test-utils"] }
[package]
name = "proc-heim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.2"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
bytes = "1"
tokio-stream = { version = "0.1.16", features = ["sync"] }
nix = { version = "0.29.0", features = ["fs"] }
thiserror = "2.0.3"

[dev-dependencies]
tempfile = "3"
sysinfo = "0.32.0"
test-utils = { path = "test-utils" }
serde = {version = "1",  features = ["derive"]}
serde_json = "1.0.133"
proptest = "1.5.0"