workspace = { members = ["test-utils"] }
[package]
name = "proc-heim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: check which all libs (and its features) is needed
[dependencies]
derive_builder = { version = "0.20.2", optional = true } # TODO: make own builder impls
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
bytes = "1"
tokio-stream = { version = "0.1.16", features = ["sync", "io-util"] }
nix = { version = "0.29.0", features = ["fs"] }
thiserror = "2.0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.1", optional = true }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3"
sysinfo = "0.32.0"
test-utils = { path = "test-utils" }
serde = {version = "1",  features = ["derive"]}
serde_json = "1.0.133"
proptest = "1.5.0"

[features]
default = []
builder = ["dep:derive_builder"]
json = ["dep:serde", "dep:serde_json"]
message-pack = ["dep:serde", "dep:rmp-serde", "dep:hex", "dep:base64"]
