workspace = { members = ["test-utils"] }
[package]
name = "proc-heim"
version = "0.1.4"
edition = "2021"
description = "Library for running and managing short-lived and long-lived processes using asynchronous API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Heliwrenaid/proc-heim"
readme = "crates-io.md"
keywords = ["process", "subprocess", "command", "scripts", "manager"]
categories = ["asynchronous", "os", "os::linux-apis", "os::unix-apis"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
tokio = { version = "1.41.0",  default-features = false, features = ["rt", "fs", "process", "io-util", "net", "macros", "time"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4", "fast-rng"] }
bytes = "1"
tokio-stream = { version = "0.1.16", default-features = false, features = ["sync", "io-util"] }
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
thiserror = "2.0.3"
serde = { version = "1.0", default-features = false, features = ["std", "derive"], optional = true }
serde_json = { version = "1.0.133", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.1", optional = true }
futures ={version = "0.3.31", default-features = false, features = ["async-await"]}

[dev-dependencies]
tempfile = "3"
sysinfo = "0.32.0"
test-utils = { path = "test-utils" }
serde = {version = "1",  features = ["derive"]}
serde_json = "1.0.133"
proptest = "1.5.0"

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
message-pack = ["dep:serde", "dep:rmp-serde", "dep:hex", "dep:base64"]
serde = ["dep:serde"]


[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(CHANNEL_NIGHTLY)'] }