[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
nix = { version = "0.29.0", features = ["fs"] }
proc-heim = { path = "../" }
